fix header gap

--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ html {
 }
 
 #header {
+  gap: 80px;
   grid-area: header;
 }
 #filters {
